--- a/Program_Files/.project
+++ b/Program_Files/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP4_CamReg</name>
+	<name>Projet_SER</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -28,7 +28,13 @@
 		<link>
 			<name>e-puck2_main-processor</name>
 			<type>2</type>
-			<locationURI>PARENT-2-PROJECT_LOC/lib/e-puck2_main-processor</locationURI>
+			<locationURI>copy_PARENT/lib/e-puck2_main-processor</locationURI>
 		</link>
 	</linkedResources>
+	<variableList>
+		<variable>
+			<name>copy_PARENT</name>
+			<value>$%7BPARENT-2-ECLIPSE_HOME%7D</value>
+		</variable>
+	</variableList>
 </projectDescription>
