--- a/TP4_CamReg/makefile
+++ b/TP4_CamReg/makefile
@@ -12,6 +12,7 @@ GLOBAL_PATH = ../../lib/e-puck2_main-processor
 CSRC += ./main.c \
 		./pi_regulator.c \
 		./process_image.c \
+		./movement_control.c \
 
 #Header folders to include
 INCDIR += 
