movement control correction and changes

--- a/TP4_CamReg/makefile
+++ b/TP4_CamReg/makefile
@@ -13,6 +13,7 @@ CSRC += ./main.c \
 		./pi_regulator.c \
 		./process_image.c \
 		./movement_control.c \
+		./control_lights.c \
 
 #Header folders to include
 INCDIR += 
