jai elenever les chprintf et tout marche

--- a/TP4_CamReg/makefile
+++ b/TP4_CamReg/makefile
@@ -14,6 +14,7 @@ CSRC += ./main.c \
 		./process_image.c \
 		./movement_control.c \
 		./control_lights.c \
+		./obstacle_avoid.c \
 
 #Header folders to include
 INCDIR += 
