Added commentairy and deleted all the unecessairy includes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
         "memory": "c",
         "new": "c",
         "type_traits": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "hal.h": "c",
+        "ch.h": "c",
+        "stdio.h": "c"
     }
 }
